# KongFrame-0.1.0

./: .gitignore  CMakeLists.txt  LICENSE  README.md  clear.bat  kclient.sln
asset/: asset.dir
asset/config/: kclient.json  kclient_ios.json
asset/script/: kclient.lua  ud_desk_fm.lua  ud_file_mn.lua  ud_main.lua  ud_notify_fm.lua  ud_ok_cancel_fm.lua  ud_open_file_fm.lua  ud_picker.lua  ud_set_color_fm.lua  ud_set_script_fm.lua  ud_terminal.lua  ud_widgets.lua  ud_yes_no_cancel_fm.lua
asset/script/example/: test_scene_fm.lua
asset/shader/: flat.frag  flat.vert
asset/widget/: ud_notify_fm.json  ud_ok_cancel_fm.json  ud_open_file_fm.json  ud_set_color_fm.json  ud_set_script_fm.json  ud_yes_no_cancel_fm.json
asset/widget/example/: form.json  test_scene_fm.json
build_android/native-activity/: build.gradle  local.properties
build_android/native-activity/app/src/main/cpp/: CMakeLists.txt  main.cpp
cmake/: ios.os64.toolchain.cmake  ios.simulator64.toolchain.cmake
ext/lua-5.3.6/: loslib.c  lstate.h
inc/: arg_data.h  arg_list.h  arg_reader.h  arg_string.h  arg_writer.h  auto_buffer.h  auto_string.h  char_traits.h  common.h  data_type.h  frame_api.h  frame_def.h  frame_file.h  frame_func.h  frame_mem.h  frame_preset.h  frame_types.h  i_arg_data.h  i_arg_list.h  i_data_table.h  i_file_access.h  i_object.h  i_object_creator.h  i_object_desc.h  i_object_hook.h  i_service.h  i_service_creator.h  json_writer.h  literal_hash_table.h  memory_map.h  mutex.h  net_socket.h  platform.h  pod_array.h  pod_hash.h  pod_hash_table.h  string_hash_table.h  string_pairs.h  thread.h  thread_lock.h  (+5 more)
inc/apple/: apple_atomic.h  apple_dll.h  apple_file.h  apple_lock.h  apple_mmap.h  apple_mutex.h  apple_net.h  apple_platform.h  apple_string.h  apple_thread.h  apple_timer.h  apple_unicode.h
inc/linux/: linux_atomic.h  linux_dll.h  linux_file.h  linux_lock.h  linux_mmap.h  linux_mutex.h  linux_net.h  linux_platform.h  linux_string.h  linux_thread.h  linux_timer.h  linux_unicode.h
inc/windows/: windows_atomic.h  windows_dll.h  windows_file.h  windows_lock.h  windows_mmap.h  windows_mutex.h  windows_net.h  windows_platform.h  windows_string.h  windows_thread.h  windows_timer.h  windows_unicode.h
kclient/: CMakeLists.txt  kclient.vcxproj  kclient.vcxproj.filters  link_creator.h  memory_link.cpp  memory_link.h  memory_list.cpp  memory_list.h  read_json.h
kclient/android/: android_file_access.cpp  android_file_access.h  android_main.cpp
kclient/ios/: AppDelegate.h  AppDelegate.m  Info.plist  Main.storyboard  ViewController.h  ViewController.mm  main.m
kclient/windows/: win_app.cpp  win_egl.cpp  win_egl.h  win_terminal.cpp  win_terminal.h
kflat/: CMakeLists.txt  flat_button.cpp  flat_button.h  flat_canvas.cpp  flat_canvas.h  flat_check_box.cpp  flat_check_box.h  flat_combo_box.cpp  flat_combo_box.h  flat_config.cpp  flat_config.h  flat_container.cpp  flat_container.h  flat_cursor.cpp  flat_cursor.h  flat_data_grid.cpp  flat_data_grid.h  flat_font.cpp  flat_font.h  flat_form.cpp  flat_form.h  flat_group_box.cpp  flat_group_box.h  flat_h_scroll_bar.cpp  flat_h_scroll_bar.h  flat_image.cpp  flat_image.h  flat_input_service.cpp  flat_input_service.h  flat_label.cpp  flat_label.h  flat_list_box.cpp  flat_list_box.h  flat_list_view.cpp  flat_list_view.h  flat_main_menu.cpp  flat_main_menu.h  flat_menu.cpp  flat_menu.h  flat_meta.cpp  (+43 more)
kflatex/: CMakeLists.txt  flat_context.cpp  flat_context.h  flat_emitter.cpp  flat_emitter.h  flat_matrix.cpp  flat_matrix.h  flat_particle.cpp  flat_particle.h  flat_scene.cpp  flat_scene.h  flat_sprite.cpp  flat_sprite.h  kflatex_static.vcxproj  lib_entry.cpp
kframe/: CMakeLists.txt  frame_data_table.h  frame_factory.cpp  frame_factory.h  frame_file_access.cpp  frame_file_access.h  frame_imp.cpp  frame_imp.h  frame_inner_mem.h  frame_object_desc.cpp  frame_object_desc.h  frame_object_hook.cpp  frame_object_hook.h  frame_objects.cpp  frame_objects.h  frame_services.cpp  frame_services.h  kframe.vcxproj  kframe.vcxproj.filters  kframe_static.vcxproj  kframe_static.vcxproj.filters  lib_entry.cpp  script_extend.cpp  script_extend.h  script_file.cpp  script_file.h  script_manager.cpp  script_manager.h  script_meta.cpp  script_meta.h  script_pool.cpp  script_pool.h  script_routine.cpp  script_routine.h  script_utility.cpp  script_utility.h
kgraphic/: i_asset_loader.h  i_input_service.h  i_render_service.h  i_renderable.h  i_texture.h  rhi_device.h  rhi_resource.h  rhi_shader_texture.h
khelper/: CMakeLists.txt  file_finder.cpp  file_finder.h  frame_misc.cpp  frame_misc.h  json_doc.cpp  json_doc.h  khelper.vcxproj  khelper.vcxproj.filters  khelper_static.vcxproj  lib_entry.cpp  node_tree.cpp  node_tree.h  socket_service.cpp  socket_service.h  tcp_link.cpp  tcp_link.h
krender/: CMakeLists.txt  asset_container.h  asset_task_buffer.h  asset_thread.cpp  asset_thread.h  krender_static.vcxproj  krender_static.vcxproj.filters  lib_entry.cpp  render_service.cpp  render_service.h  texture.cpp  texture.h  texture_loader.cpp  texture_loader.h
krender/gles3/: gles3_blend_state.cpp  gles3_blend_state.h  gles3_color_buffer.cpp  gles3_color_buffer.h  gles3_color_texture.cpp  gles3_color_texture.h  gles3_depth_buffer.cpp  gles3_depth_buffer.h  gles3_depth_stencil_state.cpp  gles3_depth_stencil_state.h  gles3_depth_texture.cpp  gles3_depth_texture.h  gles3_device.cpp  gles3_device.h  gles3_dynamic_index_buffer.cpp  gles3_dynamic_index_buffer.h  gles3_dynamic_texture.cpp  gles3_dynamic_texture.h  gles3_dynamic_uniform_buffer.cpp  gles3_dynamic_uniform_buffer.h  gles3_dynamic_vertex_buffer.cpp  gles3_dynamic_vertex_buffer.h  gles3_frame_buffer.cpp  gles3_frame_buffer.h  gles3_header.h  gles3_pixel_shader.cpp  gles3_pixel_shader.h  gles3_rasterize_state.cpp  gles3_rasterize_state.h  gles3_sampler_state.cpp  gles3_sampler_state.h  gles3_shader_program.cpp  gles3_shader_program.h  gles3_shader_texture.cpp  gles3_shader_texture.h  gles3_static_index_buffer.cpp  gles3_static_index_buffer.h  gles3_static_texture.cpp  gles3_static_texture.h  gles3_static_uniform_buffer.cpp  (+9 more)
(+4 files in other folders)
